content/consul/v1.8.x/content/commands/intention/create.mdx
---
layout: commands
page_title: 'Commands: Intention Create'
sidebar_title: create
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-04T10:42:51-06:00
last_modified: 2025-12-02T16:08:41-08:00
# END AUTO GENERATED METADATA
---

# Consul Intention Create

Command: `consul intention create`

The `intention create` command creates or updates an intention.

## Usage

Usage: `consul intention create [options] SRC DST`
Usage: `consul intention create [options] -f FILE...`

`SRC` and `DST` can both take [several forms](/commands/intention#source-and-destination-naming).

#### API Options

@include 'http_api_options_client.mdx'

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

#### Intention Create Options

- `-allow` - Set the action to "allow" for intentions. This is the default.

- `-deny` - Set the action to "deny" for intentions. This cannot be specified
  with `-allow`.

- `-file` - Read intention data one or more files specified by the command
  line arguments, instead of source/destination pairs.

- `-meta key=value` - Specify arbitrary KV metadata to associate with the
  intention.

- `-replace` - Replace any matching intention. The replacement is done
  atomically per intention.

## Examples

Create an intention `web => db`:

```shell-session
$ consul intention create web db
```

Create intentions from a set of files:

```shell-session
$ consul intention create -file one.json two.json
```

Create intentions from a directory using shell expansion:

```shell-session
$ consul intention create -file intentions/*.json
```
